--- a/vaadin-grid-dynamic-columns-behavior.html
+++ b/vaadin-grid-dynamic-columns-behavior.html
@@ -110,7 +110,7 @@
         'vaadin-grid-selection-column'
       ].forEach(function(elementName) {
         var element = Polymer.dom(this).querySelector(elementName);
-        if (element && (Polymer.isInstance ? !Polymer.isInstance(element) : element instanceof Polymer.Element)) {
+        if (element && (Polymer.isInstance ? !Polymer.isInstance(element) : !(element instanceof Polymer.Element))) {
           console.warn('Make sure you have imported the required module for <' + elementName + '> element.');
         }
       }, this);
